versao para entrega

--- a/PROJETO_IGARASSU/app/i18n/pt-BR/strings.xml
+++ b/PROJETO_IGARASSU/app/i18n/pt-BR/strings.xml
@@ -8,7 +8,7 @@
 	<string name="museus">Museus</string>
 	<string name="diversao">Diversão</string>
 	<string name="feiras">Feiras</string>
-	<string name="hoteis">Hotels</string>
+	<string name="hoteis">Hotéis</string>
 	<string name="igrejas">Igrejas</string>
 	<string name="monumentos_historicos">Monumentos históricos</string>
 	<string name="pracas">Praças</string>
